miniextendr-macros/tests/ui/impl_r6_deep_clone_wrong_system.stderr
error: #[r6(deep_clone)] is only valid for R6 class systems
  --> tests/ui/impl_r6_deep_clone_wrong_system.rs:11:8
   |
11 |     fn clone_fields(&self, _name: String, _value: miniextendr_api::Robj) {}
   |        ^^^^^^^^^^^^
